--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Login</a>
         </div>
 		<div class="row right">
-			<a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Register</a>
+			<a href="http://materializecss.com/getting-started.html" id="download-buttontwo" class="btn-large waves-effect waves-light teal lighten-1">Register</a>
 		</div>
         <br><br>
 
