--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo">Logo</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
+        <li><a href="https://shellhacks.net/">Navbar Link</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
@@ -34,7 +34,7 @@
           <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
         </div>
         <div class="row left">
-          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Login</a>
+          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light #2979ff blue accent-3">Login</a>
         </div>
 		<div class="row right">
 			<a href="http://materializecss.com/getting-started.html" id="download-buttontwo" class="btn-large waves-effect waves-light teal lighten-1">Register</a>
@@ -142,10 +142,10 @@
         <div class="col l3 s12">
           <h5 class="white-text">Connect</h5>
           <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+            <li><a class="white-text" href="#!">Guillermo Garrido</a></li>
+            <li><a class="white-text" href="#!">Adrian Perez</a></li>
+            <li><a class="white-text" href="#!">Ariel _____</a></li>
+            <li><a class="white-text" href="#!">Andres Valdes</a></li>
           </ul>
         </div>
       </div>
