--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Logo</a>
+      <a id="logo-container" href="#" class="brand-logo">Logout</a>
+	  
       <ul class="right hide-on-med-and-down">
-        <li><a href="https://shellhacks.net/">Navbar Link</a></li>
-		<li>Test</li>
+        <li><a href="https://shellhacks.net/">Donate</a></li>
+		<li><a href="http://www.redcross.org/about-us/our-work/disaster-relief">American Red Cross</a></li>
+		<li><a href="http://www.doctorswithoutborders.org/">Doctors Without Borders</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="#">Navbar Link</a></li>
+        <li><a href="https://shellhacks.net/">Donate</a></li>
+		<li><a href="http://www.redcross.org/about-us/our-work/disaster-relief">American Red Cross</a></li>
+		<li><a href="http://www.doctorswithoutborders.org/">Doctors Without Borders</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
@@ -32,7 +36,7 @@
         <br><br>
         <h1 class="header center teal-text text-lighten-2">Supply Smiles</h1>
         <div class="row center">
-          <h4 class="header col s12 light">A modern responsive front-end framework based on Material Design</h4>
+          <h4 class="header col s12 light"><strong>Changing the world, </strong></h4>
         </div>
         <div class="row left">
           <a href="https://codepen.io/g6in3d/full/jGwgrx/" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Login</a>
@@ -55,28 +59,28 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center black-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
-
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+            <h2 class="center black-text"><i class="material-icons">tab</i></h2>
+            <h5 class="center">Bringing the right help</h5>
+			
+            <p class="light">At Supply Smiles, we provide the necessary information about what exactly people in disaster affected areas need.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center black-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
+            <h5 class="center">Make it easy to give relief</h5>
 
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+            <p class="light">We make it easy to send relief supplies, with partnerships with not for profit organizations such as the American Red Cross and Doctors Without Borders.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center black-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
+            <h2 class="center black-text"><i class="material-icons">build</i></h2>
+            <h5 class="center">Provide resources to victims</h5>
 
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <p class="light">We have a duty to provide disaster victims with the proper tools they need to survive.</p>
           </div>
         </div>
       </div>
@@ -89,7 +93,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h4 class="header col s12 light">A modern responsive front-end framework based on Material Design</h4>
+          <h4 class="header col s12 light white-text"><strong>A modern responsive front-end framework based on Material Design</strong></h4>
         </div>
       </div>
     </div>
@@ -115,7 +119,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h4 class="header col s12 light">A modern responsive front-end framework based on Material Design</h4>
+          <h4 class="header col s12 light"><strong>A modern responsive front-end framework based on Material Design</strong></h4>
         </div>
       </div>
     </div>
@@ -126,8 +130,8 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+          <h5 class="white-text">Team Bio</h5>
+          <p class="grey-text text-lighten-4">We are a team of Florida International University students working on this project like it's our full time job for a period of 36 hours. Any donation would help support and continue development on this project and is greatly appreciated.</p>
 
 
         </div>
