--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <br><br>
         <h1 class="header center teal-text text-lighten-2">Supply Smiles</h1>
         <div class="row center">
-          <h4 class="header col s12 light"><strong>Changing the world, </strong></h4>
+          <h4 class="header col s12 light"><strong>Changing the world, one step at a time</strong></h4>
         </div>
         <div class="row left">
           <a href="https://codepen.io/g6in3d/full/jGwgrx/" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Login</a>
@@ -93,7 +93,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h4 class="header col s12 light white-text"><strong>A modern responsive front-end framework based on Material Design</strong></h4>
+          <h4 class="header col s12 light white-text"><strong>Changing the world, one step at a time</strong></h4>
         </div>
       </div>
     </div>
@@ -119,7 +119,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h4 class="header col s12 light"><strong>A modern responsive front-end framework based on Material Design</strong></h4>
+          <h4 class="header col s12 light"><strong>Changing the world, one step at a time</strong></h4>
         </div>
       </div>
     </div>
