--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
           <h5 class="white-text">Other Links</h5>
           <ul>
             <li><a class="white-text" href="https://github.com/GuillermoGarrido/shellHacks2017">Github repository</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+            <li><a class="white-text" href="https://devpost.com/software/supplysmiles">DevPost project</a></li>
+            <li><a class="white-text" href="https://mlh.io/">Major League Hacking</a></li>
+            <li><a class="white-text" href="http://www.fiu.edu/about-us/">Florida International University</a></li>
           </ul>
         </div>
         <div class="col l3 s12">
